# article-gen

./: .env.example  .gitignore  .mcp.json  README.md  mcp-config.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
.github/workflows/: ci.yml  cron-publish.yml  deploy.yml
agents/: README.md  pyproject.toml  requirements.txt
docs/framework/: CLAUDE.md  README.md
docs/project/: 00_app_idea.md  01_project_brief.md  02_feature_spec.md  03_user_flows.md  04_edge_cases.md  05_tech_stack.md  06_permissions_matrix.md  07_acceptance_criteria.md  08_qa_checklist.md  09_agentic_generation.md  11_mcp_server.md  code_audit_2026-03-27.md  pattern_snapshot.md  repository_understanding.md  status_audit_2026-07-13.md
modal_app/: __init__.py  config.py  modal_app.py
modal_app/harness/: models.py  orchestrator.py  pool.py  progress.py  replay.py  sessions.py  topic_filter.py  usage.py
scripts/: deploy-agents.sh  dev-agents.sh  encrypt-platform-credentials.ts  encrypt-wp-passwords.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-shell.tsx
src/hooks/: useAgentRun.ts
src/inngest/: agent-article-generate.ts  agent-events-retention.ts  agent-runs-stuck-alert.ts  article-events.ts  autopilot-cron.ts  client.ts  competitor-monitor-cron.ts  embed-article.ts  generate-autopilot-article.ts  index.ts  newsletter-cron.ts  scheduled-publish-cron.ts  social-publish-cron.ts
src/lib/: agent-auth.ts  agent-runs.ts  api-auth.ts  app-url.ts  blog-context.tsx  content-dedup.ts  credits.ts  (+26 more)
supabase/: schema.sql
(+418 files in other folders)
